--- a/Components/Pages/Clients/CidClaim.razor
+++ b/Components/Pages/Clients/CidClaim.razor
@@ -22,7 +22,7 @@
         <div class="row mb-3">
             <label class="col-md-4 col-form-label">pid</label>
             <div class="col-md-8">
-                <input id="pid" class="form-control" @bind="ClaimData.pid">
+                <input class="form-control" @bind="ClaimData.pid">
                 <span class="text-danger">@Errors["pid"]?[0]</span>
             </div>
         </div>
